--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -23,7 +23,7 @@
 
 {% block header_sidebar_about %}
   <p>{% blocktrans with name=object.name %}Gesamtsumme, die die {{ name }} im vergangenen Jahr an Ärzte und Einrichtungen gezahlt hat.{% endblocktrans %}</p>
-  <a class="efa__header__more-link" href="#">background article</a>
+  <a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">Artikel lesen</a>
 {% endblock %}
 
 {% block content %}
