Write doctors instead of person

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -52,7 +52,7 @@
 
   <div class="page__row">
     <header class="page__section-header ">
-      <h3 class="page__section-headline">{% trans "Payments to persons" %}</h3>
+      <h3 class="page__section-headline">{% trans "Payments to doctors" %}</h3>
     </header>
     {% trans "Payments to doctors in 2015" as hcp_description %}
     {% for label in payments.hcp.labels %}
