--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_barchart.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_barchart.html
@@ -8,7 +8,7 @@
 </dl>
 
 <dl class="efa__chart">
-  {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.hcp.total_aggregated_percent individual=payments.hcp.total_individual_percent total=payments.hcp.total label="Zahlungen an Personen" %}
+  {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.hcp.total_aggregated_percent individual=payments.hcp.total_individual_percent total=payments.hcp.total label="Zahlungen an Ärzte" %}
 </dl>
 
 <dl class="efa__chart">
