Add some engagement buttons

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
@@ -114,7 +114,13 @@
         <p>
           {% trans "Die Informationen auf dieser Seite stammen von den 54 Mitgliedsfirmen der „Freiwilligen Selbstkontrolle für die Arzneimittelindustrie e.V.“, die diese Angaben auf ihren jeweiligen Webseiten veröffentlicht haben." %}
         </p>
+        <a class="well__cta" href="#search">
+          {% trans "Continue searching" %}
+        </a>
       </div>
+
+      {% include "correctiv_eurosfueraerzte/_support.html" %}
+
     </div>
   </div>
 
