--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
@@ -18,10 +18,14 @@
 {% endblock %}
 
 {% block header_content %}
-  {% if object.orientation %}
-    <span class="efa__header__meta">{{ object.orientation }}</span>
+  {% if object.orientations %}
+    <span class="efa__header__meta">{{ object.orientations }}</span>
   {% endif %}
-  <a class="efa__header__back-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q={{ object.location }}">
+  {% if object.geo %}
+    <a class="efa__header__back-link" href="{% url "eurosfueraerzte:eurosfueraerzte-recipientsearch" %}?latlng={{ object.geo.1|unlocalize }},{{ object.geo.0|unlocalize }}">
+  {% else %}
+    <a class="efa__header__back-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q={{ object.location }}">
+  {% endif %}
     {% if object.address %}
       {{ object.address }}<br/>
     {% endif %}
