Home: Minor conent update.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
@@ -81,7 +81,7 @@
         </h2>
 
         <p class="efa__search__lead">
-          {% trans "Pharmakonzerne bezahlen Ärzte dafür, dass sie beobachten, wie gut ihre Patienten ein bestimmtes Medikament vertragen. Wissenschaftlich sind diese „Anwendungsbeobachtungen“ wertlos. Doch Ärzte bekommen dafür im Schnitt 669 Euro – pro Patient. Eine neue CORRECTIV-Datenbank zeigt erstmals, welches Ausmaß die umstrittenen Studien erreicht haben – und welche Präparate vor allem in den Markt gedrückt werden." %}
+          {% trans "Pharmakonzerne bezahlen Ärzte dafür, dass sie beobachten, wie gut ihre Patienten ein bestimmtes Medikament vertragen. Wissenschaftlich sind diese „Anwendungsbeobachtungen“ wertlos. Doch Ärzte bekommen dafür im Schnitt 669 Euro – pro Patient. Diese Datenbank zeigt erstmals, welches Ausmaß die umstrittenen Studien erreicht haben – und welche Präparate vor allem in den Markt gedrückt werden." %}
           <a href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">Zum Hintergrundartikel</a>
         </p>
       </div>
