Show recipient note

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
@@ -113,6 +113,11 @@
           </tbody>
         </table>
       </div>
+      {% if object.note %}
+        <p>
+          <strong>Hinweis zu diesem Empfänger:</strong> {{ object.note }}
+        </p>
+      {% endif %}
     </div>
 
 
