Make note text shorter on payment recipient page

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
@@ -115,7 +115,7 @@
       </div>
       {% if object.note %}
         <p>
-          <strong>Hinweis zu diesem Empfänger:</strong> {{ object.note }}
+          <strong>Hinweis:</strong> {{ object.note }}
         </p>
       {% endif %}
     </div>
