Change description of main index page

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -9,7 +9,7 @@
 {% block title %}{% blocktrans %}Database „Euros for Doctors“{% endblocktrans %}{% endblock %}
 
 {% block additional_meta %}
-<meta name="description" content="{% blocktrans %}The database about which drugs where pushed by pharma companies.{% endblocktrans %}">
+<meta name="description" content="Wieviel Geld hat dein Arzt von der Pharmaindustrie erhalten? Zahlungen der Pharmaunternehmen an Ärzte und Fachangehörige des Geseundheitswesens.">
 {% endblock %}
 
 
@@ -66,4 +66,3 @@
 {% endblock %}
 
 {% block top_search %}{% endblock %}
-
